@@ -23,3 +23,8 @@ devicesinlan 0.4.0 20150524
 devicesinlan 0.5.0 20150617
 ===========================
 - Console output shows the number of devices in the lan
+
+devicesinlan 0.6.0 XXXXXXXX
+===========================
+- Added ping search support
+- Made my own arp-scanner
